<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textEmailAddress"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/SignUp" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/ContinueSignIn" />
</LinearLayout>
