<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ConfirmPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btContinue"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/ContinueSignIn"
        android:textAllCaps="false" />
</LinearLayout>
